apps/oxlint/src/snapshots/fixtures__cli__dot_folder_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/dot_folder
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[.a_dot_folder/index.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 94 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
