apps/oxlint/src/snapshots/fixtures__cli__linter_--deny-warnings -c config-deny-warnings-false.json debugger.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --deny-warnings -c config-deny-warnings-false.json debugger.js
working directory: fixtures/cli/linter
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 94 rules using 1 threads.
----------
CLI result: LintNoWarningsAllowed
----------
